--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,7 +19,7 @@
     text-align: center;
     max-width: 90%;
     height: 100%;
-    background-color: rgb(232, 250, 250);
+    /* background-color: rgb(232, 250, 250); */  /* removed bg color for a while. */
 }
 
 @media screen and (max-width: 700px) {
