--- a/templates/partials/navbar.hbs
+++ b/templates/partials/navbar.hbs
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-md navbar-light sticky-top" style="background-color: #f0ed58;">
-    <a class="navbar-brand" href="#">
+<nav class="navbar navbar-expand-md navbar-light sticky-top" style="margin-top: -40px; background-color: #f0ed58;">
+    <a class="navbar-brand" href="/">
         <img src="images/logoECESS.png" class="d-inline-block align-top" height="40" width="40" alt="logo">
     </a>
     <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarToggler">
@@ -9,27 +9,27 @@
     <div class="collapse navbar-collapse" id="navbarToggler">
         <ul class="navbar-nav">
             <li class="nav-item active">
-                <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Events</a>
+            <li class="nav-item active">
+                <a class="nav-link" href="#event">Events</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Message</a>
+            <li class="nav-item active">
+                <a class="nav-link" href="#messege">Messege</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">Galary</a>
+            <li class="nav-item active">
+                <a class="nav-link" href="#">Gallery</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
                 <a class="nav-link" href="#">Team</a>
             </li>
-            <li class="nav-item">
-                <a class="nav-link" href="#">NITAP(official)</a>
+            <li class="nav-item active">
+                <a class="nav-link" target="_blank" href="https://nitap.ac.in/">NITAP(official)</a>
             </li>
         </ul>
     </div>
 </nav>
 
 {{!-- <style type="text/css">
-    
+
 </style> --}}
