--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -12,7 +12,7 @@
             <div class="col-8">
                 <div class="container">
                     <h1 class="display-4">ECESS</h1>
-                    <p class="lead">Electronic & communication Enginnering Student socity</p>
+                    <p class="lead">Electronic & communication Engineering Student socity</p>
                 </div>
                 <welcome> Welcome&nbsp;<span>Guest.</span></welcome>
                 <welcome> Welcome To&nbsp;<span>ECESS.</span></welcome>
