fixing the bug due to version

--- a/templates/partials/gallery.hbs
+++ b/templates/partials/gallery.hbs
@@ -1,72 +1,76 @@
+<h1 class="title">Gallery</h1>
 <div id="carouselExampleIndicators" class="carousel slide py-10 mb-5" data-bs-ride="carousel">
   <div class="carousel-indicators">
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
+      aria-current="true" aria-label="Slide 1"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"
+      aria-label="Slide 2"></button>
+    <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"
+      aria-label="Slide 3"></button>
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active">
-        <div class="d-flex justify-content-evenly flex-wrap">
+      <div class="d-flex justify-content-evenly flex-wrap">
 
         <div class="card" style="width: 20rem;">
-  <img src="https://source.unsplash.com/1600x900/?mobile" class="card-img-top" alt="...">
- 
-</div>
+          <img src="https://source.unsplash.com/1600x900/?mobile" class="card-img-top" alt="...">
 
-<div class="card" style="width: 20rem;">
-  <img src="https://source.unsplash.com/1600x900/?campus" class="card-img-top" alt="...">
- 
-</div>
+        </div>
 
-<div class="card" style="width: 20rem;">
-  <img src="https://source.unsplash.com/1600x900/?car" class="card-img-top" alt="...">
-  
-</div>
-</div>
+        <div class="card" style="width: 20rem;">
+          <img src="https://source.unsplash.com/1600x900/?campus" class="card-img-top" alt="...">
+
+        </div>
+
+        <div class="card" style="width: 20rem;">
+          <img src="https://source.unsplash.com/1600x900/?car" class="card-img-top" alt="...">
+
+        </div>
+      </div>
       {{!-- <img src="https://source.unsplash.com/1600x900/?nature,water" class="d-block w-100" alt="..."> --}}
     </div>
 
     <div class="carousel-item">
-        <div class="d-flex justify-content-evenly flex-wrap">
+      <div class="d-flex justify-content-evenly flex-wrap">
 
         <div class="card" style="width: 20rem;">
-  <img src="https://source.unsplash.com/1600x900/?fire" class="card-img-top" alt="...">
-  
-</div>
+          <img src="https://source.unsplash.com/1600x900/?fire" class="card-img-top" alt="...">
 
-<div class="card" style="width: 20rem;">
-  <img src="https://source.unsplash.com/1600x900/?computer" class="card-img-top" alt="...">
- 
-</div>
+        </div>
 
-<div class="card" style="width: 20rem;">
-  <img src="https://source.unsplash.com/1600x900/?book" class="card-img-top" alt="...">
- 
-</div>
-</div>
-   
+        <div class="card" style="width: 20rem;">
+          <img src="https://source.unsplash.com/1600x900/?computer" class="card-img-top" alt="...">
+
+        </div>
+
+        <div class="card" style="width: 20rem;">
+          <img src="https://source.unsplash.com/1600x900/?book" class="card-img-top" alt="...">
+
+        </div>
+      </div>
+
       {{!-- <img src="https://source.unsplash.com/1600x900/?flower" class="d-block w-100" alt="..."> --}}
     </div>
 
     <div class="carousel-item">
 
-        <div class="d-flex justify-content-evenly flex-wrap">
+      <div class="d-flex justify-content-evenly flex-wrap">
 
         <div class="card" style="width: 20rem;">
-  <img src="https://source.unsplash.com/1600x900/?camera" class="card-img-top" alt="...">
- 
-</div>
+          <img src="https://source.unsplash.com/1600x900/?camera" class="card-img-top" alt="...">
 
-<div class="card" style="width: 20rem;">
-  <img src="https://source.unsplash.com/1600x900/?pen" class="card-img-top" alt="...">
- 
-</div>
+        </div>
 
-<div class="card" style="width: 20rem;">
-  <img src="https://source.unsplash.com/1600x900/?block" class="card-img-top" alt="...">
-  
-</div>
-</div>
+        <div class="card" style="width: 20rem;">
+          <img src="https://source.unsplash.com/1600x900/?pen" class="card-img-top" alt="...">
+
+        </div>
+
+        <div class="card" style="width: 20rem;">
+          <img src="https://source.unsplash.com/1600x900/?block" class="card-img-top" alt="...">
+
+        </div>
+      </div>
       {{!-- <img src="https://source.unsplash.com/1600x900/?mountain" class="d-block w-100" alt="..."> --}}
     </div>
   </div>
