--- a/templates/partials/navbar.hbs
+++ b/templates/partials/navbar.hbs
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-md navbar-light sticky-top" style="margin-top: -40px; background-color: #f0ed58;">
+<nav class="navbar navbar-expand-md navbar-light sticky-top" style="background-color: #f0ed58;">
     <a class="navbar-brand" href="/">
         <img src="images/logoECESS.png" class="d-inline-block align-top" height="40" width="40" alt="logo">
     </a>
