--- a/public/css/style.css
+++ b/public/css/style.css
@@ -14,9 +14,16 @@ body {
 
 .jumbo {
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     align-items: center;
-    text-align: center;
+    /* text-align: center; */
+}
+
+.jumbo img {
+    height: 250px;
+    display: block;
+    margin-left: 64px;
+    border-radius: 50%;
 }
 
 .head {
@@ -79,11 +86,6 @@ body {
     text-align: center;
     max-width: 90%;
     height: 100%;
-    /* <<<<<<< HEAD background-color: rgb(233, 236, 239);
-    border: 1px solid transparent;
-    =======/* background-color: rgb(232, 250, 250); */
-    /* removed bg color for a while. */
-    /* >>>>>>>4212ef00db281fd5efd1daa2b615c721627d7e3a */
 }
 
 welcome {
@@ -158,6 +160,16 @@ welcome span {
 /* media query for responsive design */
 
 @media screen and (max-width: 700px) {
+    .jumbo {
+        flex-direction: column;
+        text-align: center;
+        align-items: center;
+    }
+    .jumbo img {
+        height: 150px;
+        display: block;
+        margin-left: -30px;
+    }
     .cover {
         height: 40vh;
     }
