--- a/templates/partials/members.hbs
+++ b/templates/partials/members.hbs
@@ -1,4 +1,4 @@
-<h1>Our Team</h1>
+<h1 class="title">Our Tean</h1>
 <div class="row">
       <div class="col-lg-4 mb-5" >
         <svg class="bd-placeholder-img rounded-circle" width="140" height="140" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
