--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -7,15 +7,13 @@
     <div class="jumbotron jumbotron-fluid">
         <div class="row jumbo">
             <div class="col-4">
-                <img src="/images/logoECESS.png" alt="logo" style="height: 250px; display: block; margin: auto;">
+                <img src="/images/logoECESS.png" alt="logo">
             </div>
             <div class="col-8">
                 <div class="container">
-                    <h1 class="display-4">ECESS</h1>
-                    <p class="lead">Electronic & communication Enginnering Student socity</p>
+                    <h1 class="display-4" style="font-weight: 400;">ECESS</h1>
+                    <p class="lead">Electronic & communication Engineering Student socity</p>
                 </div>
-                <welcome> Welcome&nbsp;<span>Guest.</span></welcome>
-                <welcome> Welcome To&nbsp;<span>ECESS.</span></welcome>
             </div>
         </div>
     </div>
@@ -35,15 +33,7 @@
 
 
 
-<<<<<<< HEAD
     <div class="main" id="event">
-=======
-        {{!-- events section start --}}
-
-        {{!-- <h1>
-            Events will roll here
-        </h1> --}}
->>>>>>> 4212ef00db281fd5efd1daa2b615c721627d7e3a
 
         {{!-- events section start --}}
         {{>events}}
@@ -56,25 +46,13 @@
 
 
         {{!-- Galary section start --}}
-
         {{>gallery}}
-
         {{!-- Galary section end --}}
-       
+
+
         {{!-- Our Team section start --}}
-          
-          {{>members}}
-
+        {{>members}}
         {{!-- Our Team section end --}}
-
-<<<<<<< HEAD
-        {{!-- Galary section end --}}
-=======
-
-       
-
-
->>>>>>> 4212ef00db281fd5efd1daa2b615c721627d7e3a
     </div>
 
 
@@ -91,11 +69,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
         integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
         crossorigin="anonymous"></script>
-    {{!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+    {{!-- swapped bootstrap version 4 with version 5 --}}
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+        crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script> --}}
-     {{!-- swapped bootstrap version 4 with version 5 --}}
-        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
