--- a/templates/partials/events.hbs
+++ b/templates/partials/events.hbs
@@ -1,3 +1,4 @@
+<div id="event" style=" display: block; margin-top: -45px; height: 75px;"></div>
 <h1 class="title">Events</h1>
 <div class="event">
     <div id="accordion">
