--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -18,6 +18,7 @@
         </div>
     </div>
 
+    <div id="home" style=" display: block;"></div>
     {{!-- navbar from bootstrap start --}}
     {{>navbar}}
     {{!-- navbar from bootstrap end --}}
@@ -25,7 +26,7 @@
 
 
     {{!-- home section start --}}
-    <div class="cover" id="home">
+    <div class="cover">
         <welcome> Welcome&nbsp;<span>Guest.</span></welcome>
         <welcome> Welcome To&nbsp;<span>ECESS.</span></welcome>
     </div>
@@ -33,7 +34,7 @@
 
 
 
-    <div class="main" id="event">
+    <div class="main">
 
         {{!-- events section start --}}
         {{>events}}
