--- a/templates/partials/gallery.hbs
+++ b/templates/partials/gallery.hbs
@@ -1,3 +1,4 @@
+<div id="gallery" style=" display: block; margin-top: -40px; height: 70px;"></div>
 <h1 class="title">Gallery</h1>
 <div id="carouselExampleIndicators" class="carousel slide py-10 mb-5" data-bs-ride="carousel">
   <div class="carousel-indicators">
