--- a/templates/partials/messege.hbs
+++ b/templates/partials/messege.hbs
@@ -1,3 +1,4 @@
+<div id="messege" style=" display: block; margin-top: -45px; height: 75px;"></div>
 <h1 class="title">Messege</h1>
 <div class="messege">
     <div class="card respose">
