--- a/templates/partials/navbar.hbs
+++ b/templates/partials/navbar.hbs
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-expand-md navbar-light sticky-top" style="background-color: #f0ed58;">
-    <a class="navbar-brand" href="/">
+    <a class="navbar-brand" href="/" style="margin-left: 17px;">
         <img src="images/logoECESS.png" class="d-inline-block align-top" height="40" width="40" alt="logo">
     </a>
     <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarToggler">
@@ -9,22 +9,22 @@
     <div class="collapse navbar-collapse" id="navbarToggler">
         <ul class="navbar-nav">
             <li class="nav-item active">
-                <a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
+                <a class="nav-link js-scroll-trigger" href="#home">Home</a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="#event">Events</a>
+                <a class="nav-link js-scroll-trigger" href="#event">Events</a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="#messege">Messege</a>
+                <a class="nav-link js-scroll-trigger" href="#messege">Messege</a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="#">Gallery</a>
+                <a class="nav-link js-scroll-trigger" href="#gallery">Gallery</a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" href="#">Team</a>
+                <a class="nav-link js-scroll-trigger" href="#team">Our Team</a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link" target="_blank" href="https://nitap.ac.in/">NITAP(official)</a>
+                <a class="nav-link js-scroll-trigger" target="_blank" href="https://nitap.ac.in/">NITAP(official)</a>
             </li>
         </ul>
     </div>
