--- a/templates/partials/events.hbs
+++ b/templates/partials/events.hbs
@@ -1,14 +1,15 @@
-<div id="event" style=" display: block; margin-top: -45px; height: 75px;"></div>
-<h1 class="title">Events</h1>
+{{!-- <div id="event" style=" display: block; margin-top: -45px; height: 75px;"></div>
+<h1 class="title">Events</h1> --}}
 <div class="event">
+     <h2 style="font-weight: bold; color:var(--text-color);"> EVENTS</h2>
     <div id="accordion">
         <div class="card">
             {{!-- style="border-left: 25px solid red;" --}}
             <div class="row" >
-                <div class="col-4 card-header head" style="background-color: #cf5555;">
+                <div class="col-4 card-header head" style="background-color: var(--secondary);">
                     25-Jun-2021
                 </div>
-                <div class="col-8" style="padding-right: 5px; padding-left: 5px; background-color: #ee8484;">
+                <div class="col-8" style="padding-right: 5px; padding-left: 5px; background-color: var(--primary);">
                     <div class="card-header" id="headingOne">
                         <h5 class="mb-0">
                             <button class="btn btn-link collapsed head" data-toggle="collapse"
@@ -38,10 +39,10 @@
         </div>
         <div class="card">
             <div class="row">
-                <div class="col-4 card-header head" style="background-color: #cf5555;">
+                <div class="col-4 card-header head" style="background-color: var(--secondary);">
                     30-Jun-2021
                 </div>
-                <div class="col-8" style="padding-right: 5px; padding-left: 5px; background-color: #ee8484;">
+                <div class="col-8" style="padding-right: 5px; padding-left: 5px; background-color:  var(--primary);">
                     <div class="card-header" id="headingTwo">
                         <h5 class="mb-0">
                             <button class="btn btn-link collapsed head" data-toggle="collapse"
@@ -70,10 +71,10 @@
             </div>
             <div class="card">
                 <div class="row">
-                    <div class="col-4 card-header head" style="background-color: #cf5555;">
+                    <div class="col-4 card-header head" style="background-color: var(--secondary);">
                         30-Jul-2021
                     </div>
-                    <div class="col-8" style="padding-right: 5px; padding-left: 5px; background-color: #ee8484;">
+                    <div class="col-8" style="padding-right: 5px; padding-left: 5px; background-color: var(--primary);">
                         <div class="card-header" id="headingThree">
                             <h5 class="mb-0">
                                 <button class="btn btn-link collapsed head" data-toggle="collapse"
