--- a/templates/partials/footer.hbs
+++ b/templates/partials/footer.hbs
@@ -2,6 +2,7 @@
     <div class="ftr">
         <span>Created by <a href="#">Aditya</a> | <span class="far fa-copyright"></span> 2021 All rights
             Reserved</span>
+           <h5 style="padding-top: 1.5rem;">Follow Us</h5>
         <div class="social-icons">
             <a href="https://www.linkedin.com/in/aditya101rxl" target="_blank">
                 <i class="fa fa-linkedin-square linkedIn"></i>
