--- a/templates/partials/messege.hbs
+++ b/templates/partials/messege.hbs
@@ -1,10 +1,19 @@
-<div id="messege" style=" display: block; margin-top: -45px; height: 75px;"></div>
-<h1 class="title">Messege</h1>
-<div class="messege">
+{{!-- <div id="messege" style=" display: block; margin-top: -45px; height: 75px;"></div>
+<h1 class="title">Message</h1> --}}
+<div class="messege" style="margin: 2rem;">
+    <div class="card respose">
+        {{!-- <img class="card-img-top" src="/images/p1.jpg" alt="Card image cap"> --}}
+        <div class="card-body">
+            <h5 class="card-title" style="font-weight: bold;">Our Vision</h5>
+            <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
+                content. This content is a little bit longer.</p>
+            {{!-- <p class="card-text"> <span style="color: crimson;">Email : </span> abc@nitap.ac.in</small></p> --}}
+        </div>
+    </div>
     <div class="card respose">
         <img class="card-img-top" src="/images/p1.jpg" alt="Card image cap">
         <div class="card-body">
-            <h5 class="card-title">Director's Messege</h5>
+            <h5 class="card-title" style="font-weight: bold;">Director's Message</h5>
             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
                 content. This content is a little bit longer.</p>
             <p class="card-text"> <span style="color: crimson;">Email : </span> abc@nitap.ac.in</small></p>
@@ -13,7 +22,7 @@
     <div class="card respose">
         <img class="card-img-top" src="/images/p1.jpg" alt="Card image cap">
         <div class="card-body">
-            <h5 class="card-title">Director's Messege</h5>
+            <h5 class="card-title" style="font-weight: bold;">Director's Message</h5>
             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
                 content. This content is a little bit longer.</p>
             <p class="card-text"> <span style="color: crimson;">Email : </span> abc@nitap.ac.in</small></p>
@@ -22,16 +31,16 @@
     <div class="card respose">
         <img class="card-img-top" src="/images/p1.jpg" alt="Card image cap">
         <div class="card-body">
-            <h5 class="card-title">Director's Messege</h5>
+            <h5 class="card-title" style="font-weight: bold;">Director's Message</h5>
             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
                 content. This content is a little bit longer.</p>
             <p class="card-text"> <span style="color: crimson;">Email : </span> abc@nitap.ac.in</small></p>
         </div>
     </div>
-    <div class="card respose">
+     <div class="card respose">
         <img class="card-img-top" src="/images/p1.jpg" alt="Card image cap">
         <div class="card-body">
-            <h5 class="card-title">Director's Messege</h5>
+            <h5 class="card-title" style="font-weight: bold;">Director's Message</h5>
             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
                 content. This content is a little bit longer.</p>
             <p class="card-text"> <span style="color: crimson;">Email : </span> abc@nitap.ac.in</small></p>
