--- a/templates/partials/navbar.hbs
+++ b/templates/partials/navbar.hbs
@@ -1,8 +1,9 @@
-<nav class="navbar navbar-expand-md navbar-light sticky-top" style="background-color: #f0ed58;">
+<nav class="navbar navbar-expand-md navbar-light sticky-top " style="background-color: #A855F7;">
     <a class="navbar-brand" href="/" style="margin-left: 17px;">
-        <img src="images/logoECESS.png" class="d-inline-block align-top" height="40" width="40" alt="logo">
+        <img src="images/purpleLogo.png" class="d-inline-block align-top" height="40" width="40" alt="logo">
     </a>
-    <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarToggler">
+    
+    <button class="navbar-toggler" data-toggle="collapse" data-target=".navbar-collapse">
         <span class="navbar-toggler-icon"></span>
     </button>
 
@@ -15,7 +16,7 @@
                 <a class="nav-link js-scroll-trigger" href="#event">Events</a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link js-scroll-trigger" href="#messege">Messege</a>
+                <a class="nav-link js-scroll-trigger" href="#messege">Message</a>
             </li>
             <li class="nav-item active">
                 <a class="nav-link js-scroll-trigger" href="#gallery">Gallery</a>
