--- a/templates/partials/members.hbs
+++ b/templates/partials/members.hbs
@@ -82,7 +82,7 @@
       <div class="col-lg-3 mb-4">
         <svg class="bd-placeholder-img rounded-circle" width="120" height="120" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="Placeholder: 140x140" preserveAspectRatio="xMidYMid slice" focusable="false"><title>Placeholder</title><rect width="100%" height="100%" fill="#777"></rect><text x="50%" y="50%" fill="#777" dy=".3em">140x140</text></svg>
 
-        <h4 style="color: white; font-weight="bold";">Designation</h4>
+        <h4 style="font-weight="bold";">Designation</h4>
         <p>Name Intro</p>
         <div class="social-icons">
             
