--- a/templates/partials/gallery.hbs
+++ b/templates/partials/gallery.hbs
@@ -1,5 +1,5 @@
 <div id="gallery" style=" display: block; margin-top: -40px; height: 70px;"></div>
-<h1 class="title">Gallery</h1>
+<h1 class="title"> <a href="/gallery" style="text-decoration: none; color: black"><span class="hoverEffect">Gallery</span></a> </h1>
 <div id="carouselExampleIndicators" class="carousel slide py-10 mb-5" data-bs-ride="carousel">
   <div class="carousel-indicators">
     <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
