--- a/templates/partials/navbar.hbs
+++ b/templates/partials/navbar.hbs
@@ -9,22 +9,22 @@
     <div class="collapse navbar-collapse" id="navbarToggler">
         <ul class="navbar-nav">
             <li class="nav-item active">
-                <a class="nav-link js-scroll-trigger" href="#home">Home</a>
+                <a class="nav-link js-scroll-trigger" href="#home" style="margin-left: 17px;">Home</a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link js-scroll-trigger" href="#event">Events</a>
+                <a class="nav-link js-scroll-trigger" href="#event" style="margin-left: 17px;">Events</a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link js-scroll-trigger" href="#messege">Messege</a>
+                <a class="nav-link js-scroll-trigger" href="#messege" style="margin-left: 17px;">Messege</a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link js-scroll-trigger" href="#gallery">Gallery</a>
+                <a class="nav-link js-scroll-trigger" href="#gallery" style="margin-left: 17px;">Gallery</a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link js-scroll-trigger" href="#team">Our Team</a>
+                <a class="nav-link js-scroll-trigger" href="#team" style="margin-left: 17px;">Our Team</a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link js-scroll-trigger" target="_blank" href="https://nitap.ac.in/">NITAP(official)</a>
+                <a class="nav-link js-scroll-trigger" target="_blank" href="https://nitap.ac.in/" style="margin-left: 17px;">NITAP(official)</a>
             </li>
         </ul>
     </div>
