--- a/public/css/style.css
+++ b/public/css/style.css
@@ -24,6 +24,21 @@
 }
 
 
+/* scrollbar styling  */
+
+::-webkit-scrollbar {
+    width: 3px;
+    height: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+    background-color: var(--text-color);
+}
+
+
+/* scrollbar styling end */
+
+
 /* root colors ends */
 
 
@@ -119,38 +134,6 @@ body {
     font-weight: 500;
 }
 
-.title {
-    position: relative;
-    font-size: 40px;
-    font-weight: 500;
-    padding-bottom: 0px;
-    margin-bottom: 10px;
-    text-align: center;
-    font-family: 'Ubuntu', sans-serif;
-}
-
-.title::before {
-    content: "";
-    position: absolute;
-    bottom: 0px;
-    left: 50%;
-    width: 190px;
-    height: 5px;
-    background: black;
-    transform: translateX(-50%);
-}
-
-.title::after {
-    position: absolute;
-    bottom: -10px;
-    left: 50%;
-    font-size: 20px;
-    padding: 5px;
-    color: crimson;
-    background: white;
-    transform: translateX(-50%);
-}
-
 
 /* utility class in css end*/
 
@@ -215,7 +198,7 @@ welcome {
         width: 0ch;
     }
     50% {
-        width: 16ch;
+        width: 18ch;
     }
 }
 
@@ -270,20 +253,54 @@ welcome span {
 /* events section end*/
 
 
-/* messege section styling start */
+/* message section styling start */
 
-.messege .respose {
+.message .respose {
     display: flex;
     flex-direction: row;
     margin-bottom: 12px;
 }
 
-.messege img {
+.message img {
     max-width: 350px;
 }
 
 
-/* messege section styling end */
+/* message section styling end */
+
+
+/* footer section styling starts*/
+
+footer {
+    background: var(--primary);
+    height: 100%;
+    width: 100%;
+    padding: 2rem 5rem;
+    font-weight: bold;
+    margin-top: 3rem;
+}
+
+footer .ftr {
+    display: block;
+    text-align: center;
+    color: whitesmoke;
+}
+
+footer .ftr span a {
+    color: crimson;
+}
+
+footer .social-icons .linkedIn {
+    color: white;
+}
+
+footer .social-icons .instagram {
+    color: white;
+}
+
+footer .social-icons .facebook {
+    color: white;
+}
 
 
 /* media query for responsive design */
@@ -319,54 +336,21 @@ welcome span {
     .head {
         font-size: 11px;
     }
-    .messege .respose {
+    .message .respose {
         display: flex;
         align-items: center;
         flex-direction: column;
     }
-    .messege img {
+    .message img {
         max-width: auto;
         max-height: 250px;
     }
     .col-lg-3 {
         width: 50%;
     }
-}
-
-
-/* footer section styling starts*/
-
-footer {
-    background: var(--primary);
-    height: 100%;
-    width: 100%;
-    padding: 5rem;
-    font-weight: bold;
-    margin-top: 3rem;
-}
-
-footer .ftr {
-    display: block;
-    /* height: 200px; */
-    padding: 3px 3px;
-    text-align: center;
-    color: whitesmoke;
-}
-
-footer .ftr span a {
-    color: crimson;
-}
-
-footer .social-icons .linkedIn {
-    color: white;
-}
-
-footer .social-icons .instagram {
-    color: white;
-}
-
-footer .social-icons .facebook {
-    color: white;
+    footer {
+        padding: 1rem;
+    }
 }
 
 
