--- a/templates/partials/events.hbs
+++ b/templates/partials/events.hbs
@@ -1,5 +1,6 @@
-{{!-- <div id="event" style=" display: block; margin-top: -45px; height: 75px;"></div>
-<h1 class="title">Events</h1> --}}
+{{!-- for navigation --}}
+<div id="event" style=" display: block; margin-top: -31px; height: 35px;"></div>
+{{!-- <h1 class="title">Events</h1> --}}
 <div class="event">
      <h2 style="font-weight: bold; color:var(--text-color);"> EVENTS</h2>
     <div id="accordion">
