--- a/templates/partials/footer.hbs
+++ b/templates/partials/footer.hbs
@@ -1,18 +1,13 @@
 <footer>
     <div class="ftr">
-        <span>Created by <a href="#">Aditya</a> | <span class="far fa-copyright"></span> 2021 All rights
+        <h5 style="padding-top: 0.2rem;">Contact Us</h5>
+        <iframe
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2602.5899692886323!2d93.71469711401818!3d27.14851575643669!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3743ffd750cfc067%3A0x5631747c4337d387!2sNational%20Institute%20of%20Technology%2C%20Arunachal%20Pradesh!5e1!3m2!1sen!2sin!4v1623894431595!5m2!1sen!2sin"
+            width="100%" height="auto" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        <hr style="color: crimson; height:5px">
+        <span style="padding-top: 0.5rem;">Created by <a href="#">Aditya</a> & <a href="#">Anamika</a> | <span class="far fa-copyright"></span>
+            2021
+            All rights
             Reserved</span>
-           <h5 style="padding-top: 1.5rem;">Follow Us</h5>
-        <div class="social-icons">
-            <a href="https://www.linkedin.com/in/aditya101rxl" target="_blank">
-                <i class="fa fa-linkedin-square linkedIn"></i>
-            </a>
-            <a href="https://www.instagram.com/_aadiraj_/" target="_blank">
-                <i class="fa fa-instagram instagram"></i>
-            </a>
-            <a href="https://www.facebook.com/profile.php?id=100009102873401" target="_blank">
-                <i class="fab fa-facebook facebook"></i>
-            </a>
-        </div>
     </div>
 </footer>
