--- a/templates/partials/members.hbs
+++ b/templates/partials/members.hbs
@@ -1,5 +1,6 @@
-{{!-- <div id="team" style=" display: block; margin-top: -45px; height: 70px;"></div>
-<h1 class="title">Our Team</h1> --}}
+{{!-- for navigation --}}
+<div id="team" style=" display: block; margin-top: -13px; height: 50px;"></div>
+
 <div class="row container-fluid">
       <h2 style="font-weight: bold; color:var(--text-color); padding-bottom:2rem;"> OUR TEAM</h2>
       <div class="col-lg-3 mb-4" >
