--- a/templates/partials/message.hbs
+++ b/templates/partials/message.hbs
@@ -1,13 +1,12 @@
-{{!-- <div id="messege" style=" display: block; margin-top: -45px; height: 75px;"></div>
-<h1 class="title">Message</h1> --}}
-<div class="messege" style="margin: 2rem;">
+{{!-- for navigation --}}
+<div id="message" style=" display: block; margin-top: -31px; height: 35px;"></div>
+
+<div class="message" style="margin: 2rem;">
     <div class="card respose">
-        {{!-- <img class="card-img-top" src="/images/p1.jpg" alt="Card image cap"> --}}
         <div class="card-body">
-            <h5 class="card-title" style="font-weight: bold;">Our Vision</h5>
+            <h2 class="card-title" style="font-weight: bold;">Our Vision</h2>
             <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
                 content. This content is a little bit longer.</p>
-            {{!-- <p class="card-text"> <span style="color: crimson;">Email : </span> abc@nitap.ac.in</small></p> --}}
         </div>
     </div>
     <div class="card respose">
