--- a/templates/partials/navbar.hbs
+++ b/templates/partials/navbar.hbs
@@ -1,9 +1,10 @@
 <nav class="navbar navbar-expand-md navbar-light sticky-top " style="background-color: #A855F7;">
     <a class="navbar-brand" href="/" style="margin-left: 17px;">
-        <img src="images/purpleLogo.png" class="d-inline-block align-top" height="40" width="40" alt="logo">
+        <img src="images/purpleLogo.png" class="d-inline-block align-top" style="border-radius: 50%;" height="40"
+            width="40" alt="logo">
     </a>
-    
-    <button class="navbar-toggler" data-toggle="collapse" data-target=".navbar-collapse">
+
+    <button id="collapseBtn" class="navbar-toggler" data-toggle="collapse" data-target=".navbar-collapse">
         <span class="navbar-toggler-icon"></span>
     </button>
 
@@ -16,7 +17,7 @@
                 <a class="nav-link js-scroll-trigger" href="#event" style="margin-left: 17px;">Events</a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link js-scroll-trigger" href="#messege">Message</a>
+                <a class="nav-link js-scroll-trigger" href="#message" style="margin-left: 17px;">Message</a>
             </li>
             <li class="nav-item active">
                 <a class="nav-link js-scroll-trigger" href="#gallery" style="margin-left: 17px;">Gallery</a>
@@ -25,12 +26,24 @@
                 <a class="nav-link js-scroll-trigger" href="#team" style="margin-left: 17px;">Our Team</a>
             </li>
             <li class="nav-item active">
-                <a class="nav-link js-scroll-trigger" target="_blank" href="https://nitap.ac.in/" style="margin-left: 17px;">NITAP(official)</a>
+                <a class="nav-link js-scroll-trigger" target="_blank" href="https://nitap.ac.in/"
+                    style="margin-left: 17px;">NITAP(official)</a>
             </li>
         </ul>
     </div>
 </nav>
 
-{{!-- <style type="text/css">
+<script type="text/javascript">
 
-</style> --}}
+    let collapseBtn = document.getElementById('collapseBtn');
+    let navbarToggler = document.getElementById('navbarToggler');
+    let links = document.querySelectorAll('#navbarToggler a');
+    links.forEach(link => {
+        link.onclick = () => {
+            collapseBtn.classList.add('collapsed');
+            collapseBtn.setAttribute('aria-expanded', true);
+            navbarToggler.classList.remove('show');
+        }
+    })
+
+</script>
