--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -11,7 +11,7 @@
     <div class="jumbotron jumbotron-fluid ">
         <div class="row jumbo py-4">
             <div class="col-4">
-                <img src="/images/purpleLogo.png" alt="logo">
+                <img src="/images/LogoECESS.png" alt="logo">
             </div>
             <div class="col-8">
                 <div class="container">
