--- a/templates/partials/navbar.hbs
+++ b/templates/partials/navbar.hbs
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-md navbar-light sticky-top " style="background-color: #A855F7;">
     <a class="navbar-brand" href="/" style="margin-left: 17px;">
-        <img src="images/purpleLogo.png" class="d-inline-block align-top" style="border-radius: 50%;" height="40"
+        <img src="images/LogoECESS.png" class="d-inline-block align-top" style="border-radius: 50%;" height="40"
             width="40" alt="logo">
     </a>
 
